# Alarm

./: alarm
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: dashboard.h  gui.h
src/: dashboard.cc  gui.cc  main.cc
